--- a/velowrench.UI/Views/Help/SpokeLengthCalculatorHelpView.axaml
+++ b/velowrench.UI/Views/Help/SpokeLengthCalculatorHelpView.axaml
@@ -46,7 +46,7 @@
         <Border Grid.Row="1" Classes="Group">
             <StackPanel>
                 <!--  Hub measurements  -->
-                <TextBlock Classes="Header2" Text="Hub measurements" />
+                <TextBlock Classes="Header2" Text="{x:Static res:Languages.HubMeasurements}" />
                 <Button Grid.Row="0" Grid.Column="0"
                         Margin="0,5,0,0" HorizontalAlignment="Left" VerticalAlignment="Top"
                         Classes="Secondary"
@@ -58,7 +58,7 @@
                                                     HorizontalAlignment="Center"
                                                     Kind="InfoOutline" />
                         <TextBlock Margin="10,0" VerticalAlignment="Center"
-                                   Text="Help Page" />
+                                   Text="{x:Static res:Languages.HelpPage}" />
                     </StackPanel>
                 </Button>
 
@@ -66,19 +66,19 @@
                     <math:FormulaBlock Margin="0,15,0,5" HorizontalAlignment="Left" VerticalAlignment="Center"
                                        Formula="{}{w_L}, {}{w_R}" Scale="18" />
                     <TextBlock Margin="5,10,0,0" VerticalAlignment="Center"
-                               Classes="Content" Text="= Center to flange distances (left/right)" />
+                               Classes="Content" Text="{x:Static res:Languages.CenterToFlangeDistances}" />
                 </StackPanel>
 
                 <StackPanel Orientation="Horizontal">
                     <math:FormulaBlock Margin="0,10,0,5" HorizontalAlignment="Left" VerticalAlignment="Center"
                                        Formula="{}{D_L}, {}{D_R}" Scale="18" />
                     <TextBlock Margin="5,5,0,0" VerticalAlignment="Center"
-                               Classes="Content" Text="= Hub diameters (left/right)" />
+                               Classes="Content" Text="{x:Static res:Languages.HubDiameters}" />
                 </StackPanel>
 
                 <!--  Rim measurements  -->
                 <TextBlock Margin="0,10,0,0"
-                           Classes="Header2" Text="Rim measurements" />
+                           Classes="Header2" Text="{x:Static res:Languages.RimMeasurements}" />
                 <Button Grid.Row="0" Grid.Column="0"
                         Margin="0,5,0,0" HorizontalAlignment="Left" VerticalAlignment="Top"
                         Classes="Secondary"
@@ -90,7 +90,7 @@
                                                     HorizontalAlignment="Center"
                                                     Kind="InfoOutline" />
                         <TextBlock Margin="10,0" VerticalAlignment="Center"
-                                   Text="Help Page" />
+                                   Text="{x:Static res:Languages.HelpPage}" />
                     </StackPanel>
                 </Button>
 
@@ -98,12 +98,12 @@
                     <math:FormulaBlock Margin="0,10,0,5" HorizontalAlignment="Left" VerticalAlignment="Center"
                                        Formula="ERD" Scale="18" />
                     <TextBlock Margin="5,5,0,0" VerticalAlignment="Center"
-                               Classes="Content" Text="= Effective Rim Diameter" />
+                               Classes="Content" Text="{x:Static res:Languages.EffectiveRimDiameter}" />
                 </StackPanel>
 
                 <!--  Build configuration  -->
                 <TextBlock Margin="0,10,0,0"
-                           Classes="Header2" Text="Build configuration" />
+                           Classes="Header2" Text="{x:Static res:Languages.BuildConfiguration}" />
                 <Button Grid.Row="0" Grid.Column="0"
                         Margin="0,5,0,0" HorizontalAlignment="Left" VerticalAlignment="Top"
                         Classes="Secondary"
@@ -115,7 +115,7 @@
                                                     HorizontalAlignment="Center"
                                                     Kind="InfoOutline" />
                         <TextBlock Margin="10,0" VerticalAlignment="Center"
-                                   Text="Help Page" />
+                                   Text="{x:Static res:Languages.HelpPage}" />
                     </StackPanel>
                 </Button>
 
@@ -123,21 +123,21 @@
                     <math:FormulaBlock Margin="0,10,0,5" HorizontalAlignment="Left" VerticalAlignment="Center"
                                        Formula="S" Scale="18" />
                     <TextBlock Margin="5,5,0,0" VerticalAlignment="Center"
-                               Classes="Content" Text="= Number of spokes" />
+                               Classes="Content" Text="{x:Static res:Languages.NumberOfSpokes}" />
                 </StackPanel>
 
                 <StackPanel Orientation="Horizontal">
                     <math:FormulaBlock Margin="0,10,0,5" HorizontalAlignment="Left" VerticalAlignment="Center"
                                        Formula="X" Scale="18" />
                     <TextBlock Margin="5,5,0,0" VerticalAlignment="Center"
-                               Classes="Content" Text="= Cross count" />
+                               Classes="Content" Text="{x:Static res:Languages.CrossCount}" />
                 </StackPanel>
 
                 <StackPanel Orientation="Horizontal">
                     <math:FormulaBlock Margin="0,10,0,5" HorizontalAlignment="Left" VerticalAlignment="Center"
                                        Formula="d" Scale="18" />
                     <TextBlock Margin="5,5,0,0" VerticalAlignment="Center"
-                               Classes="Content" Text="= Hub spoke hole diameter (fixed at 2.5mm)" />
+                               Classes="Content" Text="{x:Static res:Languages.HubSpokeHoleDiameter}" />
                 </StackPanel>
 
             </StackPanel>
@@ -150,38 +150,38 @@
 
         <Border Grid.Row="3" Classes="Group">
             <StackPanel>
-                <TextBlock Classes="Content" Text="This tool use the standard side specific spoke-length formula with one shared &quot;core&quot; triangle and then a side by side step." />
+                <TextBlock Classes="Content" Text="{x:Static res:Languages.SpokeLengthCalculationDescription}" />
 
-                <!--  Defintions  -->
+                <!--  Definitions  -->
                 <TextBlock Margin="0,10,0,0"
-                           Classes="Content" Text="Definitions:" />
+                           Classes="Content" Text="{x:Static res:Languages.Definitions}" />
                 <math:FormulaBlock Margin="0,10,0,5" HorizontalAlignment="Center" VerticalAlignment="Center"
                                    Formula="{Binding DefinitionLaTeX}"
                                    Scale="16" />
 
                 <!--  Baseline chord C  -->
                 <TextBlock Margin="0,5,0,0"
-                           Classes="Content" Text="Compute the baseline chord from the law of cosines:" />
+                           Classes="Content" Text="{x:Static res:Languages.BaselineChordCalculation}" />
                 <math:FormulaBlock Margin="0,10,0,5" HorizontalAlignment="Center" VerticalAlignment="Center"
                                    Formula="{Binding BaselineChordCLaTeX}"
                                    Scale="20" />
 
                 <!--  Left spoke length  -->
                 <TextBlock Margin="0,5,0,0"
-                           Classes="Content" Text="Left spoke length:" />
+                           Classes="Content" Text="{x:Static res:Languages.LeftSpokeLength}" />
                 <math:FormulaBlock Margin="0,10,0,5" HorizontalAlignment="Center" VerticalAlignment="Center"
                                    Formula="{Binding SpokeLengthLeftLaTeX}"
                                    Scale="20" />
 
-                <!--  Left spoke right  -->
+                <!--  Right spoke length  -->
                 <TextBlock Margin="0,5,0,0"
-                           Classes="Content" Text="Left spoke right:" />
+                           Classes="Content" Text="{x:Static res:Languages.RightSpokeLength}" />
                 <math:FormulaBlock Margin="0,10,0,5" HorizontalAlignment="Center" VerticalAlignment="Center"
                                    Formula="{Binding SpokeLengthRightLaTeX}"
                                    Scale="20" />
 
                 <TextBlock Margin="0,5,0,0"
-                           Classes="Content" Text="That final - d/2 slightly shortens for the spoke-hole radius at the hub." />
+                           Classes="Content" Text="{x:Static res:Languages.SpokeHoleRadiusNote}" />
 
             </StackPanel>
 
@@ -193,7 +193,7 @@
                    Text="{x:Static res:Languages.Results}" />
         <Border Grid.Row="5" Classes="Group">
             <StackPanel>
-                <TextBlock Classes="Content" Text="The calculator provides the recommended spoke length, based on the inputs, for the gear side and the non-gear side. The two values may differ due to the presence of a cassette/freewheel or a disc brake rotor." />
+                <TextBlock Classes="Content" Text="{x:Static res:Languages.SpokeLengthResultsDescription}" />
             </StackPanel>
         </Border>
 
