--- a/velowrench.UI/Views/Help/SpokeLengthCalculatorRimMeasurementHelpView.axaml
+++ b/velowrench.UI/Views/Help/SpokeLengthCalculatorRimMeasurementHelpView.axaml
@@ -14,7 +14,7 @@
         <Grid ColumnDefinitions="*" RowDefinitions="Auto, Auto,Auto, Auto,Auto, Auto">
 
             <TextBlock Grid.Row="0"
-                       FontSize="20" FontWeight="Light" Text="Internal diameter" TextWrapping="Wrap" />
+                       FontSize="20" FontWeight="Light" Text="{x:Static res:Languages.InternalDiameter}" TextWrapping="Wrap" />
 
             <Svg x:Name="RimDiagram"
                  Grid.Row="1" Grid.Column="0"
@@ -23,9 +23,9 @@
 
             <TextBlock Grid.Row="2" Grid.Column="1"
                        Margin="0,15,0,0"
-                       FontWeight="Bold" Text="ERD= Effective Rim Diameter" TextWrapping="Wrap" />
+                       FontWeight="Bold" Text="{x:Static res:Languages.EffectiveRimDiameterAbbreviation}" TextWrapping="Wrap" />
             <TextBlock Grid.Row="3" Grid.Column="1"
-                       Text="The diameter measured at the nipple seats inside the rim (not the outside diameter)." TextWrapping="Wrap" />
+                       Text="{x:Static res:Languages.EffectiveRimDiameterDescription}" TextWrapping="Wrap" />
         </Grid>
 
     </StackPanel>
