--- a/velowrench.UI/Views/Tools/SpokeLengthCalculatorView.axaml
+++ b/velowrench.UI/Views/Tools/SpokeLengthCalculatorView.axaml
@@ -28,7 +28,7 @@
 
                         <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2"
                                    Margin="0,0,0,10" HorizontalAlignment="Left" VerticalAlignment="Center"
-                                   FontSize="14" FontWeight="Light" Text="Recommended spoke length" />
+                                   FontSize="14" FontWeight="Light" Text="{x:Static res:Languages.RecommendedSpokeLength}" />
 
 
 
@@ -36,7 +36,7 @@
                                    Margin="0,0,10,0" VerticalAlignment="Center"
                                    FontWeight="DemiBold"
                                    Foreground="{DynamicResource SemiColorText0}"
-                                   Text="Gear side:" />
+                                   Text="{x:Static res:Languages.GearSide}" />
                         <controls:LengthTextBlock Grid.Row="1" Grid.Column="1"
                                                   HorizontalAlignment="Left" VerticalAlignment="Center"
                                                   FontWeight="Bold"
@@ -47,7 +47,7 @@
                                    Margin="0,10,10,0" VerticalAlignment="Center"
                                    FontWeight="DemiBold"
                                    Foreground="{DynamicResource SemiColorText0}"
-                                   Text="Non-gear side:" />
+                                   Text="{x:Static res:Languages.NonGearSide}" />
                         <controls:LengthTextBlock Grid.Row="2" Grid.Column="1"
                                                   Margin="0,10,10,0" HorizontalAlignment="Left" VerticalAlignment="Center"
                                                   FontWeight="Bold"
@@ -75,7 +75,7 @@
     <StackPanel Margin="20,10">
 
         <Border Classes="Group">
-            <TextBlock Text="Calculate the recommended wheel spoke length using your hub and rim measurements." TextWrapping="Wrap" />
+            <TextBlock Text="{x:Static res:Languages.SpokeLengthCalculatorHeader}" TextWrapping="Wrap" />
         </Border>
 
         <!--  Hub measurements  -->
@@ -109,14 +109,14 @@
 
             <TextBlock Grid.Row="1" Grid.Column="1"
                        HorizontalAlignment="Left" VerticalAlignment="Center"
-                       FontSize="12" Text="Non-gear side" />
+                       FontSize="12" Text="{x:Static res:Languages.NonGearSide}" />
             <TextBlock Grid.Row="1" Grid.Column="2"
                        HorizontalAlignment="Center" VerticalAlignment="Center"
-                       FontSize="12" Text="Gear side" />
+                       FontSize="12" Text="{x:Static res:Languages.GearSide}" />
 
             <TextBlock Grid.Row="2" Grid.Column="0"
                        VerticalAlignment="Center"
-                       Text="Center to flange" />
+                       Text="{x:Static res:Languages.CenterToFlange}" />
             <NumericUpDown Grid.Row="2" Grid.Column="1"
                            Margin="0,5,5,5" VerticalAlignment="Center"
                            ShowButtonSpinner="False"
@@ -128,7 +128,7 @@
 
             <TextBlock Grid.Row="3" Grid.Column="0"
                        VerticalAlignment="Center"
-                       Text="Hub diameter" />
+                       Text="{x:Static res:Languages.HubDiameter}" />
             <NumericUpDown Grid.Row="3" Grid.Column="1"
                            Margin="0,5,5,5" VerticalAlignment="Center"
                            ShowButtonSpinner="False"
@@ -157,7 +157,7 @@
             </StackPanel>
             <TextBlock Grid.Row="1" Grid.Column="0"
                        VerticalAlignment="Center"
-                       Text="Internal diameter" />
+                       Text="{x:Static res:Languages.InternalDiameter}" />
             <NumericUpDown Grid.Row="1" Grid.Column="1"
                            Margin="0,5,5,5" VerticalAlignment="Center"
                            ShowButtonSpinner="False"
@@ -192,7 +192,7 @@
             </StackPanel>
             <TextBlock Grid.Row="1" Grid.Column="0"
                        Margin="0,5,0,5" VerticalAlignment="Center"
-                       Text="Number of spokes" />
+                       Text="{x:Static res:Languages.NumberOfSpokesTitle}" />
             <ComboBox Grid.Row="1" Grid.Column="1"
                       Margin="0,5,5,5" HorizontalAlignment="Stretch"
                       ItemsSource="{Binding AvailableSpokeCount}"
@@ -200,7 +200,7 @@
 
             <TextBlock Grid.Row="2" Grid.Column="0"
                        Margin="0,5,0,0" VerticalAlignment="Center"
-                       Text="Lacing pattern" />
+                       Text="{x:Static res:Languages.LacingPattern}" />
             <ComboBox Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2"
                       Margin="0,5,5,0" HorizontalAlignment="Stretch"
                       ItemsSource="{Binding AvailableSpokeLacingPatterns}"
