--- a/velowrench.UI/Views/Tools/ChainLengthCalculatorView.axaml
+++ b/velowrench.UI/Views/Tools/ChainLengthCalculatorView.axaml
@@ -31,12 +31,12 @@
                                    FontWeight="DemiBold"
                                    Foreground="{DynamicResource SemiColorText0}"
                                    Text="{x:Static res:Languages.ChainLengthLabel}" />
-                        <controls:LengthTextBlock Grid.Row="1" Grid.Column="1"
-                                                  HorizontalAlignment="Left" VerticalAlignment="Center"
-                                                  FontWeight="Bold"
-                                                  Foreground="{DynamicResource SemiColorSuccess}"
-                                                  Format="0.00"
-                                                  Value="{Binding RecommendedChainLength}" />
+                        <controls:LengthTextBlockControl Grid.Row="1" Grid.Column="1"
+                                                         HorizontalAlignment="Left" VerticalAlignment="Center"
+                                                         FontWeight="Bold"
+                                                         Foreground="{DynamicResource SemiColorSuccess}"
+                                                         Format="0.00"
+                                                         Value="{Binding RecommendedChainLength}" />
                         <TextBlock Grid.Row="2" Grid.Column="0"
                                    Margin="0,10,10,0"
                                    FontWeight="DemiBold"
@@ -71,17 +71,16 @@
         <Grid ColumnDefinitions="75*,3*,Auto" RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto">
 
             <!--  Chain Stay Length  -->
-            <controls:LengthUpDown Title="{x:Static res:Languages.ChainStayLength}"
-                                   Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3"
-                                   ConvertibleDouble="{Binding ChainStayLength}"
-                                   Increment="1" Maximum="3000" Minimum="0.1" />
+            <controls:LengthUpDownControl Title="{x:Static res:Languages.ChainStayLength}"
+                                          Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3"
+                                          ConvertibleDouble="{Binding ChainStayLength}" />
 
             <!--  Largest front chainring  -->
             <TextBlock Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"
                        Margin="0,10,0,3"
                        Text="{x:Static res:Languages.LargestFrontChainring}" />
             <NumericUpDown Grid.Row="2" Grid.Column="0"
-                           Increment="1" Maximum="100" Minimum="1" ShowButtonSpinner="False"
+                            ShowButtonSpinner="False"
                            Value="{Binding TeethLargestChainring, Delay=600}" />
             <ComboBox Grid.Row="2" Grid.Column="2"
                       Width="100"
@@ -94,7 +93,7 @@
                        Margin="0,10,0,3"
                        Text="{x:Static res:Languages.LargestRearSprocket}" />
             <NumericUpDown Grid.Row="4" Grid.Column="0"
-                           FormatString="0" Increment="1" Maximum="70" Minimum="1"
+                           FormatString="0" Increment="1" 
                            ShowButtonSpinner="False"
                            Value="{Binding TeethLargestSprocket, Delay=600}" />
             <ComboBox Grid.Row="4" Grid.Column="2"
@@ -108,7 +107,7 @@
         <!--  Calculation Status  -->
         <controls:CalculatorStateControl HorizontalAlignment="Stretch"
                                          ComputedContentTemplate="{StaticResource ChainLengthComputedContentTemplate}"
-                                         ErrorMessage="{Binding CalculatorInputErrors}"
+                                         ErrorMessage="{Binding InputErrorMessages}"
                                          State="{Binding CurrentState}" />
 
     </StackPanel>
